poe calc in progress

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,1 +1,4 @@
-@import "utils", "globals", "media", "mixins", "variables", "normalize";
+@import  "mixins" ,"utils", "globals", "media", "variables", "normalize";
+
+@import
+"blocks/header";
