--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,4 +1,10 @@
 @import  "mixins" ,"utils", "globals", "media", "variables", "normalize";
 
 @import
-"blocks/header";
+"blocks/header",
+"blocks/section",
+"blocks/currency",
+"blocks/violet-bg",
+"blocks/expedition",
+"blocks/button",
+"blocks/content-lvl";
