--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -3,10 +3,12 @@
   --color-light-gray: rgba(255, 255, 255, 0.6);
   --color-light-gray-2: rgba(255, 255, 255, 0.4);
   --color-dark: #05010D;
+  --color-dark-gray: #10081e;
   --color-block: #120E19;
   --color-succsess: #59D499;
   --color-accent-blue: #56C2FF;
   --color-accent-red: #FF6363;
+  --color-accent-orange: #ff8d63;
   --color-accent-purple: #A485FF;
   --color-accent-glow: #FFE2E2;
 
