--- a/styles/blocks/_header.scss
+++ b/styles/blocks/_header.scss
@@ -1,15 +1,11 @@
 .header{
-  padding-top: 20px;
   background-color: var(--color-block);
-  height: 100vh;
-  width: 15vw;
-  min-width: 200px;
+  font-weight: 700;
 
   &__inner{
-    height: 100%;
     display: flex;
-    flex-direction: column;
     justify-content: space-between;
+    height: 80px;
     align-items: center;
   }
 
@@ -26,7 +22,6 @@
 
     &-list{
       display: flex;
-      flex-direction: column;
       column-gap: 40px;
     }
     &-item{
