--- a/styles/style.scss
+++ b/styles/style.scss
@@ -7,4 +7,6 @@
 "blocks/violet-bg",
 "blocks/expedition",
 "blocks/button",
-"blocks/content-lvl";
+"blocks/content-lvl",
+"blocks/blight",
+"blocks/notification";
