scarabs section is done

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -11,6 +11,7 @@
   --color-accent-orange: #ff8d63;
   --color-accent-purple: #A485FF;
   --color-accent-glow: #FFE2E2;
+  --color-dark-alternate : #170e2f;
 
   --font-family-base: 'Inter', sans-serif;
 
