--- a/styles/style.scss
+++ b/styles/style.scss
@@ -9,4 +9,6 @@
 "blocks/button",
 "blocks/content-lvl",
 "blocks/blight",
-"blocks/notification";
+"blocks/notification",
+"blocks/atlas",
+"blocks/scarabs";
