--- a/styles/blocks/_expedition.scss
+++ b/styles/blocks/_expedition.scss
@@ -6,6 +6,7 @@
     padding: 15px;
     border-radius: var(--border-radius-medium);
     font-size: 16px;
+    margin-top: 30px;
   }
 
   &__list{
@@ -14,6 +15,12 @@
     grid-template-columns: repeat(2, 1fr);
     row-gap: 50px;
     column-gap: 50px;
+
+    &-boss{
+      display: flex;
+      column-gap: 20px;
+      justify-content: space-between;
+    }
   }
 
   &__item{
@@ -24,6 +31,13 @@
     background-color: var(--color-dark-gray);
     border-radius: var(--border-radius-medium);
     padding: 30px 30px 30px 30px;
+
+    &-boss{
+      border: 1px solid var(--color-light-gray);
+      padding: 10px;
+      border-radius: var(--border-radius-small);
+    }
+
   }
 
   &__title{
