--- a/styles/style.scss
+++ b/styles/style.scss
@@ -11,4 +11,6 @@
 "blocks/blight",
 "blocks/notification",
 "blocks/atlas",
-"blocks/scarabs";
+"blocks/scarabs",
+"blocks/separator",
+"blocks/equip";
