--- a/styles/style.css
+++ b/styles/style.css
@@ -453,11 +453,12 @@ svg * {
   display: block;
 }
 .scarabs__description {
-  min-width: 400px;
+  z-index: 1;
+  min-width: 390px;
   display: none;
   position: absolute;
   top: -100px;
-  left: 60px;
+  left: 0;
   background-color: var(--color-dark);
   padding: 10px;
   border-radius: var(--border-radius-medium);
@@ -466,6 +467,53 @@ svg * {
 }
 .scarabs__title {
   font-size: 18px;
+  color: var(--color-accent-orange);
+}
+
+.separator {
+  height: 10vh;
+  margin-top: 100px;
+  background-color: var(--color-dark-gray);
+}
+
+.equip__list {
+  display: grid;
+  column-gap: 10px;
+  row-gap: 20px;
+  grid-template-columns: repeat(6, 1fr);
+}
+.equip__item {
+  position: relative;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  row-gap: 10px;
+  border: 2px solid var(--color-accent-purple);
+  border-radius: var(--border-radius-medium);
+  background-color: var(--color-dark-alternate);
+  transition: var(--transition-duration);
+}
+.equip__item:hover {
+  background-color: var(--color-dark-gray);
+  transition: var(--transition-duration);
+}
+.equip__item:hover .equip__description {
+  display: block;
+}
+.equip__description {
+  display: none;
+  position: absolute;
+  left: 50%;
+  top: -40px;
+  translate: -50%;
+  min-width: 300px;
+  padding: 10px;
+  background-color: var(--color-dark);
+  border: 1px solid var(--color-succsess);
+  border-radius: var(--border-radius-medium);
+  z-index: 2;
 }
 
 /*# sourceMappingURL=style.css.map */
