--- a/styles/style.css
+++ b/styles/style.css
@@ -515,5 +515,62 @@ svg * {
   border-radius: var(--border-radius-medium);
   z-index: 2;
 }
+.equip__separator {
+  width: 100%;
+  height: 6vh;
+  background-color: var(--color-dark-gray);
+  margin-top: 50px;
+  display: flex;
+  align-items: center;
+  padding-left: 10px;
+}
+
+.gemslot {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  position: relative;
+  max-width: 100px;
+  align-self: center;
+  gap: 5px;
+  margin-top: 10px;
+}
+.gemslot__text {
+  display: none;
+  position: absolute;
+  left: -100px;
+  top: -150px;
+  border: 1px solid var(--color-accent-blue);
+  padding: 5px;
+  border-radius: var(--border-radius-small);
+  background-color: var(--color-dark-gray);
+}
+.gemslot__socket {
+  position: relative;
+  width: 15px;
+  height: 15px;
+}
+.gemslot__socket:hover .gemslot__text {
+  display: block;
+}
+.gemslot__socket:after {
+  content: "";
+  left: 0;
+  top: 0;
+  position: absolute;
+  width: 15px;
+  height: 15px;
+  border: 3px solid white;
+  z-index: 5;
+  border-radius: 50%;
+}
+.gemslot__socket-r:after {
+  border-color: var(--color-accent-red);
+}
+.gemslot__socket-g:after {
+  border-color: var(--color-succsess);
+}
+.gemslot__socket-b:after {
+  border-color: var(--color-accent-blue);
+}
 
 /*# sourceMappingURL=style.css.map */
