--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -3,6 +3,7 @@
   --color-light-gray: rgba(255, 255, 255, 0.6);
   --color-light-gray-2: rgba(255, 255, 255, 0.4);
   --color-dark: #05010D;
+  --color-dark-2: rgba(28, 28, 28, 0.5);
   --color-dark-gray: #10081e;
   --color-block: #120E19;
   --color-succsess: #59D499;
