--- a/styles/style.scss
+++ b/styles/style.scss
@@ -14,4 +14,7 @@
 "blocks/scarabs",
 "blocks/separator",
 "blocks/equip",
-"blocks/gemslot";
+"blocks/gemslot",
+"blocks/note",
+"blocks/text",
+"blocks/roadmap";
