--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -14,6 +14,9 @@
   --color-accent-glow: #FFE2E2;
   --color-dark-alternate : #170e2f;
 
+  --color-new-dark-1: #21222D;
+  --color-new-dark-2: #171821;
+
   --font-family-base: 'Inter', sans-serif;
 
   --container-width: 1280px;
