--- a/styles/blocks/_button.scss
+++ b/styles/blocks/_button.scss
@@ -3,6 +3,7 @@
   padding: 5px;
   min-width: 100px;
   border-radius: var(--border-radius-small);
+  text-align: center;
   outline: none;
   background: none;
   border: 2px solid var(--color-light);
