--- a/styles/style.css
+++ b/styles/style.css
@@ -354,6 +354,7 @@ svg * {
   padding: 5px;
   min-width: 100px;
   border-radius: var(--border-radius-small);
+  text-align: center;
   outline: none;
   background: none;
   border: 2px solid var(--color-light);
