--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -14,6 +14,11 @@
   --color-accent-glow: #FFE2E2;
   --color-dark-alternate : #170e2f;
 
+  --color-s: #59D499;
+  --color-a: #d4ca59;
+  --color-b: #d49059;
+  --color-f: #d23b3b;
+
   --color-new-dark-1: #21222D;
   --color-new-dark-2: #171821;
 
