--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -3,21 +3,50 @@
   --color-light-gray: rgba(255, 255, 255, 0.6);
   --color-light-gray-2: rgba(255, 255, 255, 0.4);
   --color-dark: #05010D;
-  --color-dark-2: rgba(28, 28, 28, 0.5);
-  --color-dark-gray: #10081e;
-  --color-block: #120E19;
+  --color-dark-2: #060708;
+  --color-dark-gray: #131619;
+  --color-block: #0D0F10;
   --color-succsess: #59D499;
   --color-accent-blue: #56C2FF;
   --color-accent-red: #FF6363;
   --color-accent-orange: #ff8d63;
-  --color-accent-purple: #A485FF;
+  --color-accent-yellow: #ffc863;
+  --color-accent-purple: #a088cc;
   --color-accent-glow: #FFE2E2;
-  --color-dark-alternate : #170e2f;
+  --color-dark-alternate : #181818;
 
   --color-s: #59D499;
   --color-a: #d4ca59;
   --color-b: #d49059;
   --color-f: #d23b3b;
+
+  --color-light-100 : #FFF;
+  --color-light-200 : #d7d7d7;
+  --color-light-300 : #ababab;
+  --color-light-400 : #8f8f8f;
+
+
+  --color-dark-500 : #363A3D;
+  --color-dark-600 : #1A1D21;
+  --color-dark-700 : #131619;
+  --color-dark-800 : #0D0F10;
+  --color-dark-900 : #060708;
+
+  --color-dayblue-500 : #7989EC;
+  --color-dayblue-600 : #4D62E5;
+  --color-dayblue-700 : #3045C9;
+  --color-dayblue-800 : #243497;
+  --color-dayblue-9800 : #182364;
+
+  --color-heisenberg-500 : #A1E4F9;
+  --color-heisenberg-600 : #65BEDA;
+  --color-heisenberg-700 : #4C8FA4;
+  --color-heisenberg-800 : #335F6D;
+  --color-heisenberg-900 : #193037;
+
+  --color-green : #4AC97E;
+  --color-yellow : #c9a54a;
+  --color-red : #ec6d6c;
 
   --color-new-dark-1: #21222D;
   --color-new-dark-2: #171821;
@@ -29,7 +58,7 @@
   --section-padding-y : 256px;
 
   --border-radius: 12px;
-  --border-radius-medium: 8px;
+  --border-radius-medium: 6px;
   --border-radius-small: 6px;
   --border-radius-button: 8px;
   --button-height: 44px;
