--- a/styles/blocks/_header.scss
+++ b/styles/blocks/_header.scss
@@ -11,10 +11,22 @@
 
   &__logo{
     font-size: 25px;
-    color: var(--color-accent-purple);
+    color: var(--color-light);
+    text-shadow:
+            0px 0px 2px var(--color-accent-glow),
+            0px 0px 5px var(--color-accent-glow),
+            0px 0px 9px var(--color-accent-glow),
+            0px 0px 15px var(--color-accent-purple),
+  ;
 
     &:hover a{
-      color: var(--color-succsess);
+      color: var(--color-light);
+      text-shadow:
+              0px 0px 2px var(--color-accent-yellow),
+              0px 0px 5px var(--color-accent-yellow),
+              0px 0px 9px var(--color-accent-yellow),
+              0px 0px 15px var(--color-accent-yellow),
+    ;
     }
   }
 
